--- a/libraries/card-game/package.json
+++ b/libraries/card-game/package.json
@@ -4,13 +4,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "develop": "tsc --watch"
+    "build": "tsc"
   },
   "dependencies": {
     "@card-games/game-engine": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.0"
   }
 } 
