--- a/libraries/game-engine/package.json
+++ b/libraries/game-engine/package.json
@@ -4,10 +4,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "develop": "tsc --watch"
+    "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.0"
   }
 } 
