remove server for now

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "workspaces": [
     "libraries/*",
     "client",
-    "games/*",
-    "server"
+    "games/*"
   ],
   "scripts": {
     "develop": "concurrently -n client -c 'bgBlue.bold' \"bun run --cwd client develop\""
