--- a/applications/client/package.json
+++ b/applications/client/package.json
@@ -12,7 +12,9 @@
     "konva": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
