--- a/applications/client/package.json
+++ b/applications/client/package.json
@@ -1,32 +1,25 @@
 {
   "name": "@card-games/client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
-  "scripts": {
-    "develop": "vite --port 80 --host"
-  },
   "dependencies": {
     "@card-games/components": "workspace:*",
     "@card-games/types": "workspace:*",
-    "konva": "^9.3.0",
-    "mobx": "^6.12.0",
+    "konva": "^9.3.18",
+    "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-konva": "^18.2.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-konva": "^19.0.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.23.9",
-    "babel-plugin-module-resolver": "^5.0.0",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.3.4",
     "sass": "^1.70.0",
-    "typescript": "^5.2.2",
-    "vite": "^6.0.6"
+    "typescript": "^5.2.2"
   }
 }
