--- a/applications/client/tsconfig.json
+++ b/applications/client/tsconfig.json
@@ -21,24 +21,16 @@
         "source/components/*"
       ],
       "@card-games/types": [
-        "../../libraries/types/source"
+        "../../libraries/types"
       ]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "types": [
-      "vite/client"
-    ],
     "useDefineForClassFields": true
   },
   "include": [
     "source"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
   ]
 }
