--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "games/*"
   ],
   "scripts": {
-    "develop": "concurrently -n client,server -c 'bgBlue.bold,bgGreen.bold' \"bun run --cwd applications/client develop\" \"bun run --cwd applications/server develop\""
+    "develop": "bun run --cwd applications/server develop"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@stylistic/eslint-plugin": "^2.12.1",
     "@types/bun": "^1.1.14",
     "basis": "TroyAlford/basis",
-    "chokidar": "^4.0.3",
-    "concurrently": "^9.1.0",
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-import-newlines": "^1.4.0",
@@ -26,7 +24,6 @@
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-typescript-sort-keys": "^3.3.0",
-    "sass": "^1.83.0",
     "typescript-eslint": "^8.18.2"
   }
 }
