overly complicated but working setup for registering and listing games

--- a/libraries/card-game/package.json
+++ b/libraries/card-game/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@card-games/card-game",
   "version": "0.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./index.ts"
+  },
   "scripts": {
     "build": "tsc"
   },
